# endpwnt

./: .gitignore  LICENSE  README.md  config.yaml  crapi-openapi-spec.html  crapi-openapi-spec.yaml  pyproject.toml
src/: base_check.py  checks.py  client.py  endpoint.py  endpwnt.py  html_reporter.py  main.py
src/endpwnt/: __init__.py  base_check.py  checks.py  cli.py  finding.py  html_reporter.py  parse_config.py  scanner.py
src/endpwnt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_checks.py  test_endpoint.py  test_scanner.py
