[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endpwnt"
version = "0.1.0"
description = "Auth-aware API endpoint security testing framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Jack Benning" }
]
keywords = ["api", "security", "appsec", "openapi", "testing", "owasp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "build>=1.2.1",
  "twine>=5.1.1"
]

[project.scripts]
endpwnt = "endpwnt.cli:main"

[project.urls]
Homepage = "https://github.com/jackbenningdev/endpwnt"
Repository = "https://github.com/jackbenningdev/endpwnt"
Issues = "https://github.com/jackbenningdev/endpwnt/issues"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
